--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/the_guardian</color>
+    <color name="colorPrimaryDark">@color/status_bar</color>
+    <color name="colorAccent">#ffffff</color>
+    <color name="navigationarColor">@color/the_guardian</color>
+
+    <color name="the_guardian">#E9EEF1</color>
+    <color name="status_bar">#d9e2e7</color>
 </resources>
