--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="toolbar_elevation">5dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -11,5 +10,8 @@
 
     <dimen name="cardView_corner_radius">3dp</dimen>
     <dimen name="cardView_elevation">2dp</dimen>
+
+    <dimen name="corners_radius">5dp</dimen>
+    <dimen name="big_padding">16dp</dimen>
 
 </resources>
