--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="navigationColor">@color/the_guardian</color>
 
     <color name="the_guardian">#E9EEF1</color>
+    <color name="the_guardian_toolbar">#052962</color>
     <color name="status_bar">#d9e2e7</color>
+    <color name="the_guardian_yellow">#FFE500</color>
 
     <color name="white">#ffffff</color>
 
