--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,18 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <!--Buttons-->
+    <style name="TheGuardianUnelevatedButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="cornerRadius">@dimen/button_radius</item>
+    </style>
+
+    <style name="TheGuardianOutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="cornerRadius">@dimen/button_radius</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
+
 </resources>
