--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             tools:src="@drawable/ic_broken_image"
             tools:minHeight="200dp"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/textTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             tools:text="Title" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/textDate"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -56,15 +56,15 @@
             android:id="@+id/some_chip"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:layout_marginStart="8dp"
             android:clickable="false"
+            android:layout_marginStart="8dp"
             android:textColor="@color/chip_text_color"
             app:chipIconEnabled="false"
             app:layout_constraintBottom_toBottomOf="@+id/textDate"
             app:layout_constraintStart_toEndOf="@+id/textDate"
             app:layout_constraintTop_toTopOf="@+id/textDate" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/textDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textDate"
             tools:text="Description"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/buttonReadMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
