--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">@color/the_guardian</color>
-    <color name="colorPrimaryDark">@color/status_bar</color>
+    <color name="colorPrimaryDark">@color/the_guardian_status_bar</color>
     <color name="colorAccent">@color/vivid_blue</color>
-    <color name="navigationColor">@color/the_guardian</color>
 
     <color name="the_guardian">#E9EEF1</color>
     <color name="the_guardian_toolbar">#052962</color>
-    <color name="status_bar">#d9e2e7</color>
+    <color name="the_guardian_status_bar">#d9e2e7</color>
     <color name="the_guardian_yellow">#FFE500</color>
 
+    <color name="news_background">@color/white</color>
+    <color name="news_header">@color/black</color>
+    <color name="chip_text">@color/white</color>
+
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="vivid_blue">#1e90ff</color>
 
     <color name="business">#8b4513</color>
     <color name="film">#262626</color>
@@ -24,7 +29,4 @@
     <color name="lifeAndStyle">#ff69b4</color>
     <color name="other">#daa520</color>
     <color name="travel">#ea7e5d</color>
-
-    <color name="chip_text_color">#ffffff</color>
-    <color name="vivid_blue">#1e90ff</color>
 </resources>
