--- a/app/src/main/res/layout-land/item_recycler.xml
+++ b/app/src/main/res/layout-land/item_recycler.xml
@@ -6,7 +6,7 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@android:color/white"
+    app:cardBackgroundColor="@color/news_background"
     app:cardElevation="@dimen/cardView_elevation"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true"
@@ -44,7 +44,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/small_margin"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+            android:textAppearance="?attr/textAppearanceHeadline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="@+id/imageView"
@@ -65,7 +65,7 @@
             android:layout_height="35dp"
             android:layout_marginStart="8dp"
             android:clickable="false"
-            android:textColor="@color/chip_text_color"
+            android:textColor="@color/chip_text"
             app:chipIconEnabled="false"
             app:layout_constraintBottom_toBottomOf="@+id/textDate"
             app:layout_constraintStart_toEndOf="@+id/textDate"
